# monopodGazebo

./: README.md
install/: local_setup.sh  setup.sh
install/anymal_d_simple_description/share/ament_index/resource_index/package_run_dependencies/: anymal_d_simple_description
install/anymal_d_simple_description/share/ament_index/resource_index/parent_prefix_path/: anymal_d_simple_description
install/anymal_d_simple_description/share/anymal_d_simple_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/anymal_d_simple_description/share/anymal_d_simple_description/cmake/: anymal_d_simple_descriptionConfig.cmake
install/anymal_d_simple_description/share/anymal_d_simple_description/config/: pos_controller.yaml
install/anymal_d_simple_description/share/anymal_d_simple_description/config/rviz/: standing.rviz
install/anymal_d_simple_description/share/anymal_d_simple_description/launch/: launch_anymal_d.launch.py
install/anymal_d_simple_description/share/anymal_d_simple_description/urdf/: anymal.sdf  anymal.urdf  anymal.xacro.urdf
install/ign_ros2_control/share/ament_index/resource_index/parent_prefix_path/: ign_ros2_control
install/ign_ros2_control/share/ign_ros2_control/: package.sh
install/ign_ros2_control_demos/lib/ign_ros2_control_demos/: example_ackermann_drive  example_diff_drive  example_effort  example_gripper  example_position  example_tricycle_drive  example_velocity
install/ign_ros2_control_demos/share/ign_ros2_control_demos/: package.sh
install/ros2_control_demo_description/share/ros2_control_demo_description/: package.sh
install/ros2_control_demo_example_1/share/ros2_control_demo_example_1/: local_setup.sh  package.sh
install/ros2_control_demo_testing/share/ros2_control_demo_testing/: package.sh
log/: latest_build
prisma_walker/config/: pos_controller.yaml
prisma_walker/config/rviz/: standing.rviz
prisma_walker/launch/: launch_monopod.launch.py
prisma_walker/urdf/: prisma_walker.urdf
src/monopod/: CMakeLists.txt  package.xml  setup.cfg
src/monopod/launch/: launch_monopod.launch.py
src/monopod/scripts/: nn.py
src/monopod/urdf/: prisma_walker.urdf
