<?xml version="1.0"?>

<package format="2">

  <name>anymal_d_simple_description</name>
  <version>1.0.5</version>
  <description>ANYmal Description Package</description>

  <license>BSD-3</license>

  <author email="lisler@anybotics.com">Linus Isler</author>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_ros2_control</depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>xacro</test_depend>
  <depend> trajectory_msgs</depend>
  <export> <!--This command tell to ros2 which cmake module use to build. Without it, the package will not be compiled
  It will tell you the packages has been built, but it will not appear in ros2 launch name_package-->
    <build_type>ament_cmake</build_type>
   <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>

</package>
